# Tractography_ADNI

./: .gitignore  README.md  read_write_data.py  run_pipeline.sh
AD-Data/: S100790_fdt_network_matrix  S100849_fdt_network_matrix  S100964_fdt_network_matrix  S101948_fdt_network_matrix  S102030_fdt_network_matrix  S102041_fdt_network_matrix  S102157_fdt_network_matrix  S102587_fdt_network_matrix  S103125_fdt_network_matrix  S105027_fdt_network_matrix  S105435_fdt_network_matrix  S107393_fdt_network_matrix  S107693_fdt_network_matrix  S108292_fdt_network_matrix  S108541_fdt_network_matrix  S108816_fdt_network_matrix  S109782_fdt_network_matrix  S110933_fdt_network_matrix  S112088_fdt_network_matrix  S113218_fdt_network_matrix  S113791_fdt_network_matrix  S114179_fdt_network_matrix  S114221_fdt_network_matrix  S115518_fdt_network_matrix  S117426_fdt_network_matrix  S119135_fdt_network_matrix  S121486_fdt_network_matrix  S121932_fdt_network_matrix  S121983_fdt_network_matrix  S122088_fdt_network_matrix  S122170_fdt_network_matrix  S123116_fdt_network_matrix  S123446_fdt_network_matrix  S124956_fdt_network_matrix  S125654_fdt_network_matrix  S125667_fdt_network_matrix  S125682_fdt_network_matrix  (+458 more)
EditLabel/: CMakeCache.txt  CMakeLists.txt  EditVtk  EditVtk.cxx  Makefile  cmake_install.cmake  download.sh  map_lh.txt  map_rh.txt  out.json  parcellationTable.json  readJson  readJson.cpp  relabelVtk.sh
EditParcellationTable/: CMakeCache.txt  CMakeLists.txt  EditParcellationTable  Makefile  cmake_install.cmake  coord_map.csv  rewriteTable.py  run.sh  updateParcellationTable.cxx
(+159 files in other folders)
